fully integrated angularJS with requireJS

--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
         </script>
 
         <!-- build:js scripts/main.js -->
-        <script data-main="scripts/main" src="components/requirejs/require-jquery.js"></script>
+        <script data-main="scripts/app" src="components/requirejs/require-jquery.js"></script>
         <!-- endbuild -->
 </body>
 </html>
