added basic info index.html

--- a/app/index.html
+++ b/app/index.html
@@ -16,17 +16,45 @@
         <!-- endbuild -->
     </head>
     <body>
+        <div class="navbar navbar-inverse navbar-fixed-top">
+          <div class="navbar-inner">
+            <div class="container">
+              <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="brand" href="#">App</a>
+              <div class="nav-collapse collapse">
+                <ul class="nav">
+                  <li class="active"><a href="#">Home</a></li>
+                  <li><a href="#about">About</a></li>
+                  <li><a href="#contact">Contact</a></li>
+                </ul>
+              </div><!--/.nav-collapse -->
+            </div>
+          </div>
+        </div>
         <div class="container">
             <div class="hero-unit">
-                <h1>'Allo, 'Allo!</h1>
+                <h1>Boilerplate</h1>
                 <p>You now have</p>
                 <ul>
                     <li>HTML5 Boilerplate</li>
                     <li>Twitter Bootstrap</li>
                     <li>RequireJS</li>
+                    <li>jQuery</li>
+                    <li>AngularJS</li>
                 </ul>
-                <p>installed.</p>
-                <h3>Enjoy coding! - Yeoman</h3>
+                <p>installed and basic configurations for</p>
+                <ul>
+                    <li>Grunt</li>
+                    <li>Bower</li>
+                    <li>jshint</li>
+                </ul>
+                <p>to get you started.</p>
+                <h3>Enjoy coding! - ds82</h3>
+                <h5>-- powered by yeoman</h5>
             </div>
         </div>
 
