--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
             s.parentNode.insertBefore(g,s)}(document,'script'));
         </script>
 
-        <!-- build:js scripts/main.js -->
+        <!-- build:js scripts/app.js -->
         <script data-main="scripts/app" src="components/requirejs/require-jquery.js"></script>
         <!-- endbuild -->
 </body>
