--- a/app/index.html
+++ b/app/index.html
@@ -71,7 +71,7 @@
         </script>
 
         <!-- build:js scripts/app.js -->
-        <script data-main="scripts/app" src="components/requirejs/require-jquery.js"></script>
+        <script data-main="scripts/main" src="components/requirejs/require-jquery.js"></script>
         <!-- endbuild -->
 </body>
 </html>
