added AppController ( = the main controller to command the <body> )

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
         <script src="components/modernizr/modernizr.js"></script>
         <!-- endbuild -->
     </head>
-    <body>
+    <body ng-controller="AppController">
         <div class="navbar navbar-inverse navbar-fixed-top" ng-controller="NavbarController">
           <div class="navbar-inner">
             <div class="container">
