--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
               <a class="brand" href="#">crm</a>
               <div class="nav-collapse collapse">
                 <ul class="nav">
-                  <li class="active"><a href="#">Firmen</a></li>
+                  <li class="active"><a ng-href="#/company">Firmen</a></li>
                   <li><a ng-href="#/people">People</a></li>
                   <!-- <li><a href="#contact">Contact</a></li> -->
                 </ul>
