--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,7 @@
                                         </li>
                                         <li class="divider-vertical"></li>
                                         <li>
-                                            <a ng-href="#/ad">Adressen</a>
+                                            <a ng-href="#/address">Adressen</a>
                                         </li>
                                         <!-- <li><a href="#contact">Contact</a></li> -->
                                     </ul>
