--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
                     <link rel="stylesheet" href="https://rawgithub.com/daneden/animate.css/master/animate.css">
                 </head>
                 <body ng-controller="AppController">
-                    <div class="navbar navbar-inverse navbar-fixed-top">
+                    <div ng-controller="NavController" class="navbar navbar-inverse navbar-fixed-top">
                         <div class="navbar-inner">
                             <div class="container">
                                 <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -40,7 +40,7 @@
                                     </span>
                                 </button>
                                 <a class="brand" href="#">mailadm</a>
-                                <div class="nav-collapse collapse">
+                                <div class="nav-collapse collapse"  style="display:none;" data-ng-show="showNavigation">
                                     <ul class="nav">
                                         <li class="divider-vertical"></li>
                                         <li>
@@ -59,8 +59,8 @@
                                     <ul class="nav pull-right">
                                         <li><a>Eingeloggt als:</a></li>
                                         <li class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                                mail@dennis.io
+                                            <a href class="dropdown-toggle" data-toggle="dropdown">
+                                                {{user.email}}
                                                 <b class="caret"></b>
                                             </a>
                                             <ul class="dropdown-menu">
