feat(update bootstrap): update to v3.0.0 of twitter bootstrap <3

--- a/app/index.html
+++ b/app/index.html
@@ -1,120 +1,163 @@
 <!doctype html>
-<!--[if lt IE 7]>
+    <!--[if lt IE 7]>
     <html class="no-js lt-ie9 lt-ie8 lt-ie7">
     <![endif]-->
     <!--[if IE 7]>
-        <html class="no-js lt-ie9 lt-ie8">
-        <![endif]-->
-        <!--[if IE 8]>
-            <html class="no-js lt-ie9">
-            <![endif]-->
-            <!--[if gt IE 8]>
-                <!-->
-                <html class="no-js">
-                <!--<![endif]-->
-                <head>
-                    <meta charset="utf-8">
-                    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-                    <title>
-                    </title>
-                    <meta name="description" content="">
-                    <meta name="viewport" content="width=device-width">
-                    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-                    <link rel="stylesheet" href="style/style.css">
-                    <!-- build:js scripts/vendor/modernizr.js -->
-                    <script src="components/modernizr/modernizr.js">
-                    </script>
-                    <!-- endbuild -->
-                    <link rel="stylesheet" href="https://rawgithub.com/daneden/animate.css/master/animate.css">
-                </head>
-                <body ng-controller="AppController">
-                    <div ng-controller="NavController" class="navbar navbar-inverse navbar-fixed-top">
-                        <div class="navbar-inner">
-                            <div class="container">
-                                <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                                    <span class="icon1-bar">
-                                    </span>
-                                    <span class="icon-bar">
-                                    </span>
-                                    <span class="icon-bar">
-                                    </span>
-                                </button>
-                                <a class="brand" href="#">mailadm</a>
-                                <div class="nav-collapse collapse"  style="display:none;" data-ng-show="showNavigation">
-                                    <ul class="nav">
-                                        <li class="divider-vertical"></li>
-                                        <li>
-                                            <a ng-href="#/user">User</a>
-                                        </li>
-                                        <li class="divider-vertical"></li>
-                                        <li>
-                                            <a ng-href="#/domain">Domains</a>
-                                        </li>
-                                        <li class="divider-vertical"></li>
-                                        <li>
-                                            <a ng-href="#/address">Adressen</a>
-                                        </li>
-                                        <!-- <li><a href="#contact">Contact</a></li> -->
-                                    </ul>
-                                    <ul class="nav pull-right">
-                                        <li><a>Eingeloggt als:</a></li>
-                                        <li class="dropdown">
-                                            <a href class="dropdown-toggle" data-toggle="dropdown">
-                                                {{user.email}}
-                                                <b class="caret"></b>
-                                            </a>
-                                            <ul class="dropdown-menu">
-                                                <li>
-                                                    <a href="#">Action</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">Another action</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">Something else here</a>
-                                                </li>
-                                                <li class="divider">
-                                                </li>
-                                                <li>
-                                                    <a href="#">Separated link</a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <!--/.nav-collapse -->
-                            </div>
-                        </div>
-                    </div>
-                    <div class="container">
-                        <div class="hero-unit" ng-view>
-                        </div>
-                    </div>
-                    <!--[if lt IE 7]>
-                        <p class="chromeframe">
-                            You are using an
-                            <strong>
-                                outdated
-                            </strong>
-                            browser. Please
-                            <a href="http://browsehappy.com/">upgrade your browser</a>
-                            or
-                            <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a>
-                            to improve your experience.
-                        </p>
-                    <![endif]-->
-                    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-                    <!-- <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
+    <html class="no-js lt-ie9 lt-ie8">
+    <![endif]-->
+    <!--[if IE 8]>
+    <html class="no-js lt-ie9">
+    <![endif]-->
+    <!--[if gt IE 8]>
+    <!-->
+    <html class="no-js">
+    <!--<![endif]-->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>
+        </title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width">
+        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+        <link rel="stylesheet" href="style/style.css">
+        <!-- build:js scripts/vendor/modernizr.js -->
+        <script src="components/modernizr/modernizr.js">
         </script>
+        <!-- endbuild -->
+        <link rel="stylesheet" href="https://rawgithub.com/daneden/animate.css/master/animate.css">
+    </head>
+    <body ng-controller="AppController">
+        <nav ng-controller="NavController" class="navbar-inverse navbar-fixed-top navbar navbar-default" role="navigation">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">mailadm</a>
+          </div>
+
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse navbar-ex1-collapse" style="display:none;" data-ng-show="showNavigation">
+            <ul class="nav navbar-nav">
+                <li>
+                    <a ng-href="#/user">User</a>
+                </li>
+                <li class="divider-vertical"></li>
+                <li>
+                    <a ng-href="#/domain">Domains</a>
+                </li>
+                <li class="divider-vertical"></li>
+                <li>
+                    <a ng-href="#/address">Adressen</a>
+                </li>
+                <li>
+                    <a ng-href="#/address">Blockierte Adressen</a>
+                </li>
+
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li class="dropdown">
+                <a href="" class="dropdown-toggle" data-toggle="dropdown">{{user.email}} <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Action</a></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li><a href="#">Separated link</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </nav>
+
+            <!--
+            <div class="navbar-inner">
+                <div class="container">
+                    <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                        <span class="icon1-bar">
+                        </span>
+                        <span class="icon-bar">
+                        </span>
+                        <span class="icon-bar">
+                        </span>
+                    </button>
+                    <a class="brand" href="#">mailadm</a>
+                    <div class="nav-collapse collapse"  style="display:none;" data-ng-show="showNavigation">
+                        <ul class="nav">
+                            <li class="divider-vertical"></li>
+                            <li>
+                                <a ng-href="#/user">User</a>
+                            </li>
+                            <li class="divider-vertical"></li>
+                            <li>
+                                <a ng-href="#/domain">Domains</a>
+                            </li>
+                            <li class="divider-vertical"></li>
+                            <li>
+                                <a ng-href="#/address">Adressen</a>
+                            </li>
+                        </ul>
+                        <ul class="nav pull-right">
+                            <li><a>Eingeloggt als:</a></li>
+                            <li class="dropdown">
+                                <a href class="dropdown-toggle" data-toggle="dropdown">
+                                    {{user.email}}
+                                    <b class="caret"></b>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a href="#">Action</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Another action</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Something else here</a>
+                                    </li>
+                                    <li class="divider">
+                                    </li>
+                                    <li>
+                                        <a href="#">Separated link</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         -->
-                    <!-- build:js scripts/app.js -->
-                    <script data-main="scripts/main" src="components/requirejs/require.js">
-                    </script>
-                    <!-- endbuild -->
-                </body>
-                
-                </html>
+        <div class="container">
+            <div class="hero-unit" ng-view>
+            </div>
+        </div>
+        <!--[if lt IE 7]>
+            <p class="chromeframe">
+                You are using an
+                <strong>
+                    outdated
+                </strong>
+                browser. Please
+                <a href="http://browsehappy.com/">upgrade your browser</a>
+                or
+                <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a>
+                to improve your experience.
+            </p>
+        <![endif]-->
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <!-- <script>
+    var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+    g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+    s.parentNode.insertBefore(g,s)}(document,'script'));
+    </script>
+    -->
+        <!-- build:js scripts/app.js -->
+        <script data-main="scripts/main" src="components/requirejs/require.js">
+        </script>
+        <!-- endbuild -->
+    </body>
+
+    </html>
