feat(blocked): add basic version of blocked module

--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
                     <a ng-href="#/address">Adressen</a>
                 </li>
                 <li>
-                    <a ng-href="#/address">Blockierte Adressen</a>
+                    <a ng-href="#/blocked">Blockierte Adressen</a>
                 </li>
 
             </ul>
