--- a/app/index.html
+++ b/app/index.html
@@ -43,13 +43,9 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse navbar-ex1-collapse" style="display:none;" data-ng-show="showNavigation">
             <ul class="nav navbar-nav">
-                <li>
-                    <a ng-href="#/user">User</a>
-                </li>
+                <li><a ng-href="#/user">User</a></li>
                 <li class="divider-vertical"></li>
-                <li>
-                    <a ng-href="#/domain">Domains</a>
-                </li>
+                <li><a ng-href="#/domain">Domains</a></li>
                 <li class="divider-vertical"></li>
                 <li>
                     <a ng-href="#/address">Adressen</a>
@@ -73,62 +69,6 @@
           </div><!-- /.navbar-collapse -->
         </nav>
 
-            <!--
-            <div class="navbar-inner">
-                <div class="container">
-                    <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                        <span class="icon1-bar">
-                        </span>
-                        <span class="icon-bar">
-                        </span>
-                        <span class="icon-bar">
-                        </span>
-                    </button>
-                    <a class="brand" href="#">mailadm</a>
-                    <div class="nav-collapse collapse"  style="display:none;" data-ng-show="showNavigation">
-                        <ul class="nav">
-                            <li class="divider-vertical"></li>
-                            <li>
-                                <a ng-href="#/user">User</a>
-                            </li>
-                            <li class="divider-vertical"></li>
-                            <li>
-                                <a ng-href="#/domain">Domains</a>
-                            </li>
-                            <li class="divider-vertical"></li>
-                            <li>
-                                <a ng-href="#/address">Adressen</a>
-                            </li>
-                        </ul>
-                        <ul class="nav pull-right">
-                            <li><a>Eingeloggt als:</a></li>
-                            <li class="dropdown">
-                                <a href class="dropdown-toggle" data-toggle="dropdown">
-                                    {{user.email}}
-                                    <b class="caret"></b>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <a href="#">Action</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Another action</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Something else here</a>
-                                    </li>
-                                    <li class="divider">
-                                    </li>
-                                    <li>
-                                        <a href="#">Separated link</a>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        -->
         <div class="container hero-unit">
             <div ng-view></div>
         </div>
@@ -145,14 +85,6 @@
                 to improve your experience.
             </p>
         <![endif]-->
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <!-- <script>
-    var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-    g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-    s.parentNode.insertBefore(g,s)}(document,'script'));
-    </script>
-    -->
         <!-- build:js scripts/app.js -->
         <script data-main="scripts/main" src="thirdparty/requirejs/require.js">
         </script>
