--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
   <![endif]-->
   <!--[if gt IE 8]>
   <!-->
-  <html class="no-js">
+  <html class="no-js" ng-app="app">
   <!--<![endif]-->
   <head>
     <meta charset="utf-8">
@@ -87,8 +87,7 @@
         </p>
     <![endif]-->
     <!-- build:js scripts/app.js -->
-    <script data-main="scripts/main" src="thirdparty/requirejs/require.js">
-    </script>
+    <script src="dist/js/main.js"></script>
     <!-- endbuild -->
   </body>
 </html>
