--- a/app/index.html
+++ b/app/index.html
@@ -28,51 +28,60 @@
   <body ng-controller="AppController">
     
     <!-- main nav -->
-    <nav ng-controller="NavController" class="navbar-inverse navbar-fixed-top navbar navbar-default" role="navigation">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">mailadm</a>
-      </div>
+    <nav
+      ng-controller="NavController"
+      class="navbar-fixed-top navbar navbar-main"
+      role="navigation"
+    >
+      <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">
+            <span class="glyphicon glyphicon-envelope"></span>
+            mailadm
+          </a>
+        </div>
 
-      <!-- wrap navigation to override navbar-collapse display -->
-      <div class="ng-cloak" ng-show="session.isUserLoggedIn()">
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-          <ul class="nav navbar-nav">
-              <li><a ng-href="#/user">User</a></li>
-              <li class="divider-vertical"></li>
-              <li><a ng-href="#/domain">Domains</a></li>
-              <li class="divider-vertical"></li>
-              <li>
-                  <a ng-href="#/address">Adressen</a>
+        <!-- wrap navigation to override navbar-collapse display -->
+        <div class="ng-cloak" ng-show="session.isUserLoggedIn()">
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse navbar-ex1-collapse">
+            <ul class="nav navbar-nav">
+                <li><a ng-href="#/user">User</a></li>
+                <li class="divider-vertical"></li>
+                <li><a ng-href="#/domain">Domains</a></li>
+                <li class="divider-vertical"></li>
+                <li>
+                    <a ng-href="#/address">Adressen</a>
+                </li>
+                <li>
+                    <a ng-href="#/blocked">Blockierte Adressen</a>
+                </li>
+            </ul>
+            <!-- {{ session.getUser() }} -->
+            <ul class="nav navbar-nav navbar-right">
+              <li class="dropdown">
+                <a href="" class="dropdown-toggle" data-toggle="dropdown">{{user.email}} <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Action</a></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li><a href="#">Separated link</a></li>
+                </ul>
               </li>
-              <li>
-                  <a ng-href="#/blocked">Blockierte Adressen</a>
-              </li>
-          </ul>
-          <!-- {{ session.getUser() }} -->
-          <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
-              <a href="" class="dropdown-toggle" data-toggle="dropdown">{{user.email}} <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li><a href="#">Separated link</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div>
       </div>
     </nav>
 
-    <div class="container-fluid" style="padding: 0 15px;">
+    <div class="container" style="padding: 0 15px;">
       <div ng-view></div>
     </div>
     <!--[if lt IE 7]>
