--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="#">
-            <span class="glyphicon glyphicon-envelope"></span>
+            <span class="fa fa-envelope"></span>
             mailadm
           </a>
         </div>
