several minor updates across all modules

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
     <!-- main nav -->
     <nav
       ng-controller="NavController"
-      class="navbar-fixed-top navbar navbar-main"
+      class="navbar-fixed-top navbar navbar-default"
       role="navigation"
     >
       <div class="container">
@@ -43,7 +43,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="#">
-            <span class="fa fa-envelope"></span>
+            <span class="fa fa-inbox"></span>
             mailadm
           </a>
         </div>
