--- a/app/index.html
+++ b/app/index.html
@@ -67,12 +67,12 @@
             <!-- {{ session.getUser() }} -->
             <ul class="nav navbar-nav navbar-right">
               <li class="dropdown">
-                <a href="" class="dropdown-toggle" data-toggle="dropdown">{{user.email}} <b class="caret"></b></a>
+                <a href="" class="dropdown-toggle" data-toggle="dropdown">
+                  {{user.email}} <b class="caret"></b>
+                </a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li><a href="#">Separated link</a></li>
+                  <li><a href="#/profile">Profile</a></li>
+                  <li><a href="#/logout">Logout</a></li>
                 </ul>
               </li>
             </ul>
