--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,12 @@
       <div class="jumbotron">
         <h1>Jumbotron heading</h1>
         <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
+        <p>
+          <a class="btn btn-lg btn-success" href="#" role="button">
+            <span class="glyphicon glyphicon-hand-right"></span>
+            Sign up today
+          </a>
+        </p>
       </div>
 
       <div class="row marketing">
