--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" ng-app="app">
   <head>
@@ -9,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="dist/favicon.ico">
 
-    <title>Narrow Jumbotron Template for Bootstrap</title>
+    <title>mailadm</title>
 
     <!-- Bootstrap core CSS -->
     <link href="dist/css/style.css" rel="stylesheet">
@@ -22,6 +21,60 @@
   </head>
 
   <body ng-controller="AppCtrl as app">
+
+<div class="iconbar iconbar-stick-left">
+            <ul>
+              <li class="">
+                <a href="#fakelink">
+                  <span class="fa fa-envelope"></span>
+                </a>
+              </li>
+              <li><a href="#fakelink" class="fui-calendar"></a></li>
+              <li><a href="#fakelink" class="fui-chat"></a></li>
+              <li><a href="#fakelink" class="fui-mail"></a></li>
+              <li>
+                <a href="#fakelink" class="fui-gear">
+                  <span class="iconbar-unread">1</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+
+    <!-- <div class="navbar navbar&#45;inverse navbar&#45;fixed&#45;top" role="navigation"> -->
+    <!--   <div class="container"> -->
+    <!--     <div class="navbar&#45;header"> -->
+    <!--       <button type="button" class="navbar&#45;toggle" data&#45;toggle="collapse" data&#45;target=".navbar&#45;collapse"> -->
+    <!--         <span class="sr&#45;only">Toggle navigation</span> -->
+    <!--       </button> -->
+    <!--       <a class="navbar&#45;brand" href="#">mailadm</a> -->
+    <!--     </div> -->
+    <!--     <div class="navbar&#45;collapse collapse"> -->
+    <!--       <ul class="nav navbar&#45;nav"> -->
+    <!--         <li class="active"><a href="#">Home</a></li> -->
+    <!--         <li><a href="#about">About</a></li> -->
+    <!--         <li><a href="#contact">Contact</a></li> -->
+    <!--         <li class="dropdown"> -->
+    <!--           <a href="#" class="dropdown&#45;toggle" data&#45;toggle="dropdown" aria&#45;expanded="false">Dropdown <b class="caret"></b></a> -->
+    <!--           <ul class="dropdown&#45;menu"> -->
+    <!--             <li><a href="#">Action</a></li> -->
+    <!--             <li><a href="#">Another action</a></li> -->
+    <!--             <li><a href="#">Something else here</a></li> -->
+    <!--             <li class="divider"></li> -->
+    <!--             <li class="dropdown&#45;header">Nav header</li> -->
+    <!--             <li><a href="#">Separated link</a></li> -->
+    <!--             <li><a href="#">One more separated link</a></li> -->
+    <!--           </ul> -->
+    <!--         </li> -->
+    <!--       </ul> -->
+    <!--       <ul class="nav navbar&#45;nav navbar&#45;right"> -->
+    <!--         <li><a href="../navbar/">Default</a></li> -->
+    <!--         <li class="active"><a href="./">Static top</a></li> -->
+    <!--         <li><a href="../navbar&#45;fixed&#45;top/">Fixed top</a></li> -->
+    <!--       </ul> -->
+    <!--     </div><!&#45;&#45;/.nav&#45;collapse &#45;&#45;> -->
+    <!--   </div> -->
+    <!-- </div> -->
+
 
     <div class="container">
       <div class="header">
@@ -40,7 +93,7 @@
         <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
         <p>
           <a class="btn btn-lg btn-success" href="#" role="button">
-            <span class="glyphicon glyphicon-hand-right"></span>
+            <span class="fa fa-usd"></span>
             Sign up today
           </a>
         </p>
@@ -70,17 +123,16 @@
         </div>
       </div>
 
-      <footer class="footer">
-        <p>&copy; Company 2014</p>
-      </footer>
+
+
 
     </div> <!-- /container -->
-
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <!-- <script src="dist/js/ie10&#45;viewport&#45;bug&#45;workaround.js"></script> -->
 
     <script src="dist/js/common.js"></script>
+    <script src="dist/js/flat-ui-pro.js"></script>
     <script src="dist/js/bundle.js"></script>
   </body>
 </html>
