--- a/app/index.html
+++ b/app/index.html
@@ -15,117 +15,68 @@
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
 
   <body ng-controller="AppCtrl as app">
 
-<div class="iconbar iconbar-stick-left">
-            <ul>
-              <li class="">
-                <a href="#fakelink">
-                  <span class="fa fa-envelope"></span>
-                </a>
-              </li>
-              <li><a href="#fakelink" class="fui-calendar"></a></li>
-              <li><a href="#fakelink" class="fui-chat"></a></li>
-              <li><a href="#fakelink" class="fui-mail"></a></li>
-              <li>
-                <a href="#fakelink" class="fui-gear">
-                  <span class="iconbar-unread">1</span>
-                </a>
-              </li>
-            </ul>
-          </div>
+    <div class="iconbar iconbar-stick-left">
+      <ul>
+        <li class="">
+          <a href="#fakelink">
+            <span class="fa fa-envelope"></span>
+          </a>
+        </li>
+        <li><a href="#fakelink" class="fui-calendar"></a></li>
+        <li><a href="#fakelink" class="fui-chat"></a></li>
+        <li><a href="#fakelink" class="fui-mail"></a></li>
+        <li>
+          <a href="#fakelink" class="fui-gear">
+            <span class="iconbar-unread">1</span>
+          </a>
+        </li>
+      </ul>
+    </div>
 
     <!-- <div class="navbar navbar&#45;inverse navbar&#45;fixed&#45;top" role="navigation"> -->
-    <!--   <div class="container"> -->
-    <!--     <div class="navbar&#45;header"> -->
-    <!--       <button type="button" class="navbar&#45;toggle" data&#45;toggle="collapse" data&#45;target=".navbar&#45;collapse"> -->
-    <!--         <span class="sr&#45;only">Toggle navigation</span> -->
-    <!--       </button> -->
-    <!--       <a class="navbar&#45;brand" href="#">mailadm</a> -->
-    <!--     </div> -->
-    <!--     <div class="navbar&#45;collapse collapse"> -->
-    <!--       <ul class="nav navbar&#45;nav"> -->
-    <!--         <li class="active"><a href="#">Home</a></li> -->
-    <!--         <li><a href="#about">About</a></li> -->
-    <!--         <li><a href="#contact">Contact</a></li> -->
-    <!--         <li class="dropdown"> -->
-    <!--           <a href="#" class="dropdown&#45;toggle" data&#45;toggle="dropdown" aria&#45;expanded="false">Dropdown <b class="caret"></b></a> -->
-    <!--           <ul class="dropdown&#45;menu"> -->
-    <!--             <li><a href="#">Action</a></li> -->
-    <!--             <li><a href="#">Another action</a></li> -->
-    <!--             <li><a href="#">Something else here</a></li> -->
-    <!--             <li class="divider"></li> -->
-    <!--             <li class="dropdown&#45;header">Nav header</li> -->
-    <!--             <li><a href="#">Separated link</a></li> -->
-    <!--             <li><a href="#">One more separated link</a></li> -->
-    <!--           </ul> -->
-    <!--         </li> -->
-    <!--       </ul> -->
-    <!--       <ul class="nav navbar&#45;nav navbar&#45;right"> -->
-    <!--         <li><a href="../navbar/">Default</a></li> -->
-    <!--         <li class="active"><a href="./">Static top</a></li> -->
-    <!--         <li><a href="../navbar&#45;fixed&#45;top/">Fixed top</a></li> -->
-    <!--       </ul> -->
-    <!--     </div><!&#45;&#45;/.nav&#45;collapse &#45;&#45;> -->
-    <!--   </div> -->
-    <!-- </div> -->
+      <!--   <div class="container"> -->
+        <!--     <div class="navbar&#45;header"> -->
+          <!--       <button type="button" class="navbar&#45;toggle" data&#45;toggle="collapse" data&#45;target=".navbar&#45;collapse"> -->
+            <!--         <span class="sr&#45;only">Toggle navigation</span> -->
+            <!--       </button> -->
+          <!--       <a class="navbar&#45;brand" href="#">mailadm</a> -->
+          <!--     </div> -->
+        <!--     <div class="navbar&#45;collapse collapse"> -->
+          <!--       <ul class="nav navbar&#45;nav"> -->
+            <!--         <li class="active"><a href="#">Home</a></li> -->
+            <!--         <li><a href="#about">About</a></li> -->
+            <!--         <li><a href="#contact">Contact</a></li> -->
+            <!--         <li class="dropdown"> -->
+              <!--           <a href="#" class="dropdown&#45;toggle" data&#45;toggle="dropdown" aria&#45;expanded="false">Dropdown <b class="caret"></b></a> -->
+              <!--           <ul class="dropdown&#45;menu"> -->
+                <!--             <li><a href="#">Action</a></li> -->
+                <!--             <li><a href="#">Another action</a></li> -->
+                <!--             <li><a href="#">Something else here</a></li> -->
+                <!--             <li class="divider"></li> -->
+                <!--             <li class="dropdown&#45;header">Nav header</li> -->
+                <!--             <li><a href="#">Separated link</a></li> -->
+                <!--             <li><a href="#">One more separated link</a></li> -->
+                <!--           </ul> -->
+              <!--         </li> -->
+            <!--       </ul> -->
+          <!--       <ul class="nav navbar&#45;nav navbar&#45;right"> -->
+            <!--         <li><a href="../navbar/">Default</a></li> -->
+            <!--         <li class="active"><a href="./">Static top</a></li> -->
+            <!--         <li><a href="../navbar&#45;fixed&#45;top/">Fixed top</a></li> -->
+            <!--       </ul> -->
+          <!--     </div><!&#45;&#45;/.nav&#45;collapse &#45;&#45;> -->
+        <!--   </div> -->
+      <!-- </div> -->
 
 
-    <div class="container">
-      <div class="header">
-        <nav>
-          <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="#">Home</a></li>
-            <li role="presentation"><a href="#">About</a></li>
-            <li role="presentation"><a href="#">Contact</a></li>
-          </ul>
-        </nav>
-        <h3 class="text-muted">{{ app.APP_NAME }}</h3>
-      </div>
-
-      <div class="jumbotron">
-        <h1>Jumbotron heading</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p>
-          <a class="btn btn-lg btn-success" href="#" role="button">
-            <span class="fa fa-usd"></span>
-            Sign up today
-          </a>
-        </p>
-      </div>
-
-      <div class="row marketing">
-        <div class="col-lg-6">
-          <h4>Subheading</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-          <h4>Subheading</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-        </div>
-
-        <div class="col-lg-6">
-          <h4>Subheading</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-          <h4>Subheading</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-        </div>
-      </div>
-
-
-
-
+    <div class="container" ng-viewport>
     </div> <!-- /container -->
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
